<resources>
    <string name="app_name">QuizApp</string>
    <string name="hello_world">Hello World</string>
    <string name="country">Country</string>
    <string name="apply_button">Apply</string>
    <string name="birth_date">Birth Date</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="Show">Show</string>
    <string name="Hide">Hide</string>
    <string name="helloWorldTV">Hello World!</string>
    <string name="convert_to_cm">Basic Converter</string>
    <string name="math">math</string>
    <string name="null_input_message">Enter the value to convert</string>
    <string name="gray">Gray</string>
    <string name="light">Light</string>
    <string name="noButton">No</string>
    <string name="yesButton">Yes</string>
    <string name="grayColor">Gray</string>
    <string name="convertButton">Convert</string>
    <string name="digitHint">Digit</string>
    <string name="question">Do You like my application?</string>
    <string name="thank_you_happy">Thank You :)</string>
    <string name="thank_you_sad">Thank You ):</string>
    <string name="Welcome">Welcome</string>
    <string name="enterName">Please enter your name</string>
    <string name="name">Name</string>
    <string name="start">Start</string>
    <string name="flag">Flag</string>
    <string name="submit">Submit</string>
    <string name="finish">Finish</string>
    <string name="next">Next</string>
    <string name="congratulations">Congratulations!!</string>
    <string name="username">Ronit Chinda</string>
    <string name="score">Score</string>
    <string name="max_10">6/10</string>
    <string name="trophy">trophy</string>
    <string name="playAgain">Play Again</string>
</resources>